# library_webapi

./: .env.development  Cargo.toml  README.md  docker-compose.environments.yml
application/: Cargo.toml
application/src/: lib.rs  usecases.rs
application/src/errors/: internal_error.rs
application/src/interfaces/: i_book_repository.rs  i_logger.rs  mod.rs
application/src/usecases/: book.rs  book_usecase.rs  mod.rs  something.rs  user.rs
business/: Cargo.toml
business/src/: lib.rs  usecases.rs
business/src/dtos/: create_book_dto.rs  mod.rs  something_dto.rs  update_book_dto.rs
business/src/entities/: book.rs
business/src/usecases/: i_book.rs  i_book_usecase.rs  i_something.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2021-10-06-234506_create_books_table/: down.sql  up.sql
infrastructure/src/: lib.rs  schema.rs
infrastructure/src/database/: connection.rs  mod.rs
infrastructure/src/database/models/: books.rs
infrastructure/src/environments/: env.rs
infrastructure/src/logger/: logger.rs
infrastructure/src/repositories/: book_repository.rs  mod.rs
interface/: Cargo.toml
interfaces/: Cargo.toml
webapi/: Cargo.toml
webapi/src/: main.rs
webapi/src/controllers/: book.rs  mod.rs  something.rs
webapi/src/middleware/: deserializer_error.rs  mod.rs
webapi/src/models/: book.rs  http_error.rs  mod.rs  something.rs
