[package]
name = "infrastructure"
version = "0.1.0"
edition = "2018"

[dependencies]
business = { path = "../business" }
application = { path = "../application" }

log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = [ "postgres", "r2d2" ] }
postgres = "0.19.1"
r2d2 = "0.8.9"