[package]
name = "webapi"
version = "0.1.0"
edition = "2018"

[dependencies]
business = {path = "../business"}
application = {path = "../application"}
infrastructure = {path = "../infrastructure"}
actix-http = "2.2.1"
actix-rt = "2.2.0"
actix-web = "3.3.2"
actix-cors = "0.5.4"
env_logger = "0.9.0"
serde = {version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
